# terminal-assistant

./: .clang-format  .gitignore  CMakeLists.txt  README.md  assistant.py  main.cpp  prompts.json  requirements.txt
.githooks/: README.md  pre-commit
include/: api_client.hpp  command_executor.hpp  curl_client.hpp
src/: CMakeLists.txt  api_client.cpp  command_executor.cpp  curl_client.cpp  main.cpp
